fix: MoviePage: detail-infos align text to left

--- a/src/components/MovieInfos/MovieInfos.scss
+++ b/src/components/MovieInfos/MovieInfos.scss
@@ -20,6 +20,7 @@
     & .detail-infos {
       color: #666;
       font-weight: 100;
+      text-align: left;
       & .detail-infos--name {
         display: inline-block;
         width: 140px;
